--- a/client/public/style.css
+++ b/client/public/style.css
@@ -2,117 +2,127 @@ body {
     background-color: #5DBCD2;
     display: flex;
     min-height: 100vh;
-    flex-direction: column; 
-}
-
-  main {
-    flex: 1 0 auto;
+    flex-direction: column;
+    position: relative; 
+    padding-bottom: 163.25px;
   }
-
-.name-title {
+  
+  main {
+    /* max-height: 100%; */
+    flex: 1 0 auto;
+    /* min-height: calc(100vh - 64px - 163.25px); */
+  }
+  
+  .name-title {
     color: #5DBCD2;
     font-size: xx-large;
-}
-
-.nav-link {
+  }
+  
+  .nav-link {
     color: #5DBCD2;
     font-size: large;
-}
-
-nav {
+  }
+  
+  nav {
     min-height: auto;
-}
-
-.profile-photo {
+  }
+  
+  .profile-photo {
    border-radius: 50%; 
    box-shadow: 3px 3px 5px #888888;
    width: 200px;
    margin-top: 20px;
    margin-left: 0px;
-}
-
-p {
+  }
+  
+  p {
     font-family: 'Spartan', ;
-}
-
-.about-me {
+  }
+  
+  .about-me {
     margin: 20px;
     /* padding: 20px; */
-}
-
-.about-me-container {
+  }
+  
+  .about-me-container {
     border-radius: 10px;
     box-shadow: 3px 3px 5px #888888;
     background-color: #ADF6B1;
     margin-top: 20px;
-}
-
-hr {
+  }
+  
+  hr {
     border: 1px solid;
     opacity: 50%;
-}
-
-.about-me-title {
+  }
+  
+  .about-me-title {
     color: #5DBCD2;
-}
-
-.portfolio-display {
+  }
+  
+  .portfolio-display {
     padding: 20px;
     margin: 20px;
     height: max-content;
-}
-
-.contact-form {
+  }
+  
+  .contact-form {
     margin: 20px;
     background-color: #ADF6B1;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
     box-shadow: 3px 3px 5px #888888;
-
-}
-
-.slides {
+  
+  }
+  
+  .slides {
     background-color: none;
-}
-
-.mobile-side {
+  }
+  
+  .mobile-side {
     color: #717C89;
     background-color: #90BAAD;
-}
-
-.project-section {
+  }
+  
+  .project-section {
     margin: 20px;
     background-color: #ADF6B1;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
     box-shadow: 3px 3px 5px #888888;
-}
-
-.project-image {
+  }
+  
+  .project-image {
     box-shadow: 3px 3px 5px #888888;
-}
-
-.proj-description-title {
-color: #717C89;
-}
-
-h4 {
+  }
+  
+  .proj-description-title {
+  color: #717C89;
+  }
+  
+  h4 {
     font-weight: bolder;
-}
-
-.git {
+  }
+  
+  .git {
     color: #717C89;
     margin: 20px;
     border-radius: 50%;
-}
-
-.copyright {
+  }
+  
+  .copyright {
     margin: auto;
-}
-
-.linksIcon {
+  }
+  
+  .linksIcon {
     color: #5DBCD2;
     margin: 15px;
-}
+  }
+
+  footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+  }
